<resources>
    <string name="app_name">HuntApp</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="hint">hint</string>
    <string name="todo">TODO</string>
    <string name="classroom_hunt_app">Classroom Hunt App</string>
    <string name="a_class_tracking_management_system">A class tracking management system</string>
    <string name="hello">hello</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="forgot">Forgot</string>
    <string name="reset">Reset</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="gf">Ground floor</string>
    <string name="ff">First floor</string>
    <string name="sf">Second floor</string>
    <string name="tf">Third floor</string>
    <string name="floor_title">Floors</string>
    <string name="tip">Click the room number to check classroom status</string>
    <string name="profile_title">Profile</string>
    <string name="floor">Floor</string>
    <string name="check">Check</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="filled">filled</string>
    <string name="filled_bit">filled a bit</string>
    <string name="empty">Empty</string>
    <string name="empty_bit">Empty a bit</string>
    <string name="available">Available Rooms</string>
    <string name="room_title">Rooms</string>
    <string name="result_title">Result</string>
    <string name="support">Support</string>
    <string name="mail">Mail Us</string>
    <string name="Hide">Hide</string>
    <string name="detecting">Detecting</string>
    <string name="fp">Forgot Password?</string>
    <string name="go">Go</string>
    <string name="un">Username </string>
    <string name="email">Email </string>
    <string name="dept">Department </string>
    <string name="delete">Delete account</string>
    <string name="new_user">new user?Signup</string>
    <string name="enter_new_pass">Enter new password</string>
    <string name="confirm_new_pass">Confirm new password</string>
    <string name="status">Status</string>
    <string name="approx">Approx student</string>
    <string name="already">Already have an account?login</string>
    <string name="enter_un">Enter Username</string>
    <string name="submit">Submit</string>
    <string name="back_to_login">Back to login page</string>
    <string name="not_found">CCTV camera not installed in the selected room</string>
    <string name="show_img">see image</string>
    <string name="hide_img">Hide image</string>
    <string name="ip_pop">Enter IP address</string>
    <string name="chg_ip">Change IP</string>
    <string name="ent_ip">Enter IP</string>
    <string name="ok">ok</string>
</resources>