<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen"
    android:background="#fff">

    <ImageView
        android:id="@+id/main_img"
        android:layout_width="220dp"
        android:layout_height="329dp"
        android:layout_marginBottom="300dp"
        android:contentDescription="@string/todo"
        android:src="#000"
        android:transitionName="logo_trans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="120dp"
        android:fontFamily="@font/bangers"
        android:gravity="center_horizontal"
        android:text="@string/classroom_hunt_app"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="50sp"
        android:transitionName="text_trans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_img" />

    <TextView
        android:id="@+id/main_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="131dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/a_class_tracking_management_system"
        android:textSize="16sp"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_text" />

</androidx.constraintlayout.widget.ConstraintLayout>